--- a/index.html
+++ b/index.html
@@ -12,24 +12,25 @@
     <header>
         <h1>Monster Slayer</h1>
     </header>
-    
+
     <div id="game">
         <section id="monster" class="container">
             <h2>Monster Health</h2>
             <div class="healthbar">
-                <div class="healthbar__value"></div>
+                <div class="healthbar__value" :style="monsterBarStyles"></div>
             </div>
         </section>
 
         <section id="player" class="container">
             <h2>Player Health</h2>
             <div class="healthbar">
-                <div class="healthbar__value"></div>
+                <!-- v-bind:style is the same as :style -->
+                <div class="healthbar__value" :style="playerBarStyles"></div>
             </div>
         </section>
 
         <section id="controls">
-            <button>Attack</button>
+            <button @click="attackMonster">Attack</button>
             <button>Special Attack</button>
             <button>Heal</button>
             <button>Give Up</button>
