--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
         <section id="controls">
             <button @click="attackMonster">Attack</button>
             <button :disabled="specialAttackEnabled" @click="specialAttack">Special Attack</button>
-            <button>Heal</button>
+            <button @click="healPlayer">Heal</button>
             <button>Give Up</button>
         </section>
 
